--- a/code/JIF.CMS/JIF.CMS.Core/JIF.CMS.Core.csproj
+++ b/code/JIF.CMS/JIF.CMS.Core/JIF.CMS.Core.csproj
@@ -82,6 +82,8 @@
     <Compile Include="Data\IRepository.cs" />
     <Compile Include="Domain\Article.cs" />
     <Compile Include="Domain\BaseEntity.cs" />
+    <Compile Include="Domain\SysAdmin.cs" />
+    <Compile Include="Domain\SysLog.cs" />
     <Compile Include="Infrastructure\AppDomainTypeFinder.cs" />
     <Compile Include="Infrastructure\DependencyManagement\ContainerManager.cs" />
     <Compile Include="Infrastructure\DependencyManagement\IDependencyRegistrar.cs" />
@@ -93,10 +95,12 @@
     <Compile Include="Infrastructure\WebAppTypeFinder.cs" />
     <Compile Include="IPagedList.cs" />
     <Compile Include="IWorkContext.cs" />
+    <Compile Include="JIFConsts.cs" />
     <Compile Include="JIFException.cs" />
     <Compile Include="PagedData.cs" />
     <Compile Include="PagedList.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Security\EncyptHelper.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="app.config" />
