--- a/code/JIF.CMS/JIF.CMS.Management/Web.config
+++ b/code/JIF.CMS/JIF.CMS.Management/Web.config
@@ -28,6 +28,16 @@
     <compilation debug="true" targetFramework="4.5" />
     <httpRuntime targetFramework="4.5" />
   </system.web>
+
+  <system.webServer>
+    <modules runAllManagedModulesForAllRequests="true" />
+    <staticContent>
+      <remove fileExtension=".woff" />
+      <mimeMap fileExtension=".woff" mimeType="application/font-woff" />
+      <mimeMap fileExtension=".woff2" mimeType="application/font-woff" />
+    </staticContent>
+  </system.webServer>
+
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
       <dependentAssembly>
