--- a/code/JIF.CMS/JIF.CMS.Management/Web.config
+++ b/code/JIF.CMS/JIF.CMS.Management/Web.config
@@ -39,6 +39,12 @@
         <add namespace="System.Web.Optimization" />
       </namespaces>
     </pages>
+
+
+    <authentication mode="Forms">
+      <forms cookieless="UseCookies" name="ju" defaultUrl="/home" loginUrl="/welcome"></forms>
+    </authentication>
+    
   </system.web>
 
   <system.webServer>
