--- a/code/JIF.CMS/JIF.CMS.Web.Framework/JIF.CMS.Web.Framework.csproj
+++ b/code/JIF.CMS/JIF.CMS.Web.Framework/JIF.CMS.Web.Framework.csproj
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{C3EF00B2-7752-48EF-AAB3-B7BC11E08FA6}</ProjectGuid>
+    <ProjectGuid>{32FC4C79-089E-4D2A-82B9-7CC39101C0C8}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>JIF.CMS.Core</RootNamespace>
-    <AssemblyName>JIF.CMS.Core</AssemblyName>
+    <RootNamespace>JIF.CMS.Web.Framework</RootNamespace>
+    <AssemblyName>JIF.CMS.Web.Framework</AssemblyName>
     <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
   </PropertyGroup>
@@ -30,24 +30,13 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="Autofac, Version=4.4.0.0, Culture=neutral, PublicKeyToken=17863af14b0044da, processorArchitecture=MSIL">
-      <HintPath>..\packages\Autofac.4.4.0\lib\net45\Autofac.dll</HintPath>
-      <Private>True</Private>
-    </Reference>
-    <Reference Include="Autofac.Integration.Mvc, Version=4.0.0.0, Culture=neutral, PublicKeyToken=17863af14b0044da, processorArchitecture=MSIL">
-      <HintPath>..\packages\Autofac.Mvc5.4.0.1\lib\net45\Autofac.Integration.Mvc.dll</HintPath>
-      <Private>True</Private>
-    </Reference>
     <Reference Include="Microsoft.Web.Infrastructure, Version=1.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
       <HintPath>..\packages\Microsoft.Web.Infrastructure.1.0.0.0\lib\net40\Microsoft.Web.Infrastructure.dll</HintPath>
       <Private>True</Private>
     </Reference>
     <Reference Include="System" />
-    <Reference Include="System.Configuration" />
     <Reference Include="System.Core" />
-    <Reference Include="System.Drawing" />
     <Reference Include="System.Web" />
-    <Reference Include="System.Web.Extensions" />
     <Reference Include="System.Web.Helpers, Version=3.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
       <HintPath>..\packages\Microsoft.AspNet.WebPages.3.2.3\lib\net45\System.Web.Helpers.dll</HintPath>
       <Private>True</Private>
@@ -80,31 +69,25 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Configuration\JIFConfig.cs" />
-    <Compile Include="Data\IRepository.cs" />
-    <Compile Include="Domain\Article.cs" />
-    <Compile Include="Domain\BaseEntity.cs" />
-    <Compile Include="Domain\SysAdmin.cs" />
-    <Compile Include="Domain\SysLog.cs" />
-    <Compile Include="Domain\User.cs" />
-    <Compile Include="Infrastructure\AppDomainTypeFinder.cs" />
-    <Compile Include="Infrastructure\DependencyManagement\ContainerManager.cs" />
-    <Compile Include="Infrastructure\DependencyManagement\IDependencyRegistrar.cs" />
-    <Compile Include="Infrastructure\EngineContext.cs" />
-    <Compile Include="Infrastructure\IEngine.cs" />
-    <Compile Include="Infrastructure\ITypeFinder.cs" />
-    <Compile Include="Infrastructure\JIFEngine.cs" />
-    <Compile Include="Infrastructure\Singleton.cs" />
-    <Compile Include="Infrastructure\WebAppTypeFinder.cs" />
-    <Compile Include="IPagedList.cs" />
-    <Compile Include="IWorkContext.cs" />
-    <Compile Include="JIFConsts.cs" />
-    <Compile Include="JIFException.cs" />
-    <Compile Include="PagedData.cs" />
-    <Compile Include="PagedList.cs" />
+    <Compile Include="Controllers\AdminControllerBase.cs" />
+    <Compile Include="Controllers\BaseController.cs" />
+    <Compile Include="Filters\AdminAuthorizeAttribute.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Common\RandomHelper.cs" />
-    <Compile Include="Security\EncyptHelper.cs" />
+    <Compile Include="WebWorkContext.cs" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\JIF.CMS.Core\JIF.CMS.Core.csproj">
+      <Project>{c3ef00b2-7752-48ef-aab3-b7bc11e08fa6}</Project>
+      <Name>JIF.CMS.Core</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\JIF.CMS.Data.EntityFramework\JIF.CMS.Data.EntityFramework.csproj">
+      <Project>{51e131eb-eac0-4339-99c2-2477712459e4}</Project>
+      <Name>JIF.CMS.Data.EntityFramework</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\JIF.CMS.Services\JIF.CMS.Services.csproj">
+      <Project>{9532bcac-0342-4297-a8b6-6028326c01b1}</Project>
+      <Name>JIF.CMS.Services</Name>
+    </ProjectReference>
   </ItemGroup>
   <ItemGroup>
     <None Include="app.config" />
