--- a/code/JIF.CMS/JIF.CMS.Management/packages.config
+++ b/code/JIF.CMS/JIF.CMS.Management/packages.config
@@ -11,6 +11,9 @@
   <package id="Microsoft.AspNet.Web.Optimization" version="1.1.3" targetFramework="net45" />
   <package id="Microsoft.AspNet.WebPages" version="3.2.3" targetFramework="net45" />
   <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net45" />
+  <package id="MiniProfiler" version="3.2.0.157" targetFramework="net45" />
+  <package id="MiniProfiler.EF6" version="3.0.11" targetFramework="net45" />
+  <package id="MiniProfiler.MVC4" version="3.0.11" targetFramework="net45" />
   <package id="Modernizr" version="2.6.2" targetFramework="net45" />
   <package id="MySql.Data" version="6.9.9" targetFramework="net45" />
   <package id="MySql.Data.Entity" version="6.9.9" targetFramework="net45" />
