--- a/code/JIF.CMS/JIF.CMS.Services/JIF.CMS.Services.csproj
+++ b/code/JIF.CMS/JIF.CMS.Services/JIF.CMS.Services.csproj
@@ -50,6 +50,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="SysManager\Dtos\LoginOutputDto.cs" />
     <Compile Include="SysManager\Dtos\SysAdminInertBasicInfo.cs" />
+    <Compile Include="SysManager\Dtos\SysAdminSearchListOutDto.cs" />
     <Compile Include="SysManager\Dtos\SysAdminUpdateBasicInfo.cs" />
     <Compile Include="SysManager\ISysManagerService.cs" />
     <Compile Include="SysManager\SysManagerService.cs" />
