update article service

--- a/code/JIF.CMS/JIF.CMS.Core/JIF.CMS.Core.csproj
+++ b/code/JIF.CMS/JIF.CMS.Core/JIF.CMS.Core.csproj
@@ -84,6 +84,7 @@
     <Compile Include="Configuration\JIFConfig.cs" />
     <Compile Include="Data\IRepository.cs" />
     <Compile Include="Domain\Article.cs" />
+    <Compile Include="Domain\ArticleCategory.cs" />
     <Compile Include="Domain\BaseEntity.cs" />
     <Compile Include="Domain\SysAdmin.cs" />
     <Compile Include="Domain\SysLog.cs" />
