--- a/code/JIF.CMS/JIF.CMS.Management.API/Web.config
+++ b/code/JIF.CMS/JIF.CMS.Management.API/Web.config
@@ -6,13 +6,15 @@
 <configuration>
   <configSections>
     <section name="JIFConfig" type="JIF.CMS.Core.Configuration.JIFConfig, JIF.CMS.Core" requirePermission="false" />
+    <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
+    <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
   </configSections>
-  
   <appSettings></appSettings>
-
   <!--暂时没有用到 JIF.CMS.Core.Configuration.JIFConfig-->
   <JIFConfig></JIFConfig>
-
+  <connectionStrings>
+    <add name="JIF.CMS.DB" providerName="MySql.Data.MySqlClient" connectionString="Data Source=localhost;port=9527;Initial Catalog=jif.cms;uid=root;pwd=root" />
+  </connectionStrings>
   <system.web>
     <compilation debug="true" targetFramework="4.5" />
     <httpRuntime targetFramework="4.5" />
@@ -53,4 +55,21 @@
       </dependentAssembly>
     </assemblyBinding>
   </runtime>
+  <system.data>
+    <DbProviderFactories>
+      <remove invariant="MySql.Data.MySqlClient" />
+      <add name="MySQL Data Provider" invariant="MySql.Data.MySqlClient" description=".Net Framework Data Provider for MySQL" type="MySql.Data.MySqlClient.MySqlClientFactory, MySql.Data, Version=6.9.9.0, Culture=neutral, PublicKeyToken=c5687fc88969c44d" />
+    </DbProviderFactories>
+  </system.data>
+  <entityFramework>
+    <providers>
+      <provider invariantName="MySql.Data.MySqlClient" type="MySql.Data.MySqlClient.MySqlProviderServices, MySql.Data.Entity.EF6, Version=6.9.9.0, Culture=neutral, PublicKeyToken=c5687fc88969c44d"></provider>
+      <provider invariantName="System.Data.SqlClient" type="System.Data.Entity.SqlServer.SqlProviderServices, EntityFramework.SqlServer" />
+    </providers>
+    <defaultConnectionFactory type="System.Data.Entity.Infrastructure.LocalDbConnectionFactory, EntityFramework">
+      <parameters>
+        <parameter value="mssqllocaldb" />
+      </parameters>
+    </defaultConnectionFactory>
+  </entityFramework>
 </configuration>
