--- a/code/JIF.CMS/JIF.CMS.Management/Web.config
+++ b/code/JIF.CMS/JIF.CMS.Management/Web.config
@@ -37,6 +37,9 @@
         <add namespace="System.Web.Routing" />
         <add namespace="System.Web.WebPages" />
         <add namespace="System.Web.Optimization" />
+        <add namespace="JIF.CMS.Core"/>
+        <add namespace="JIF.CMS.Services"/>
+        <add namespace="JIF.CMS.Management" />
       </namespaces>
     </pages>
 
@@ -44,7 +47,8 @@
     <authentication mode="Forms">
       <forms cookieless="UseCookies" name="ju" defaultUrl="/home" loginUrl="/welcome"></forms>
     </authentication>
-    
+
+    <sessionState mode="Off"></sessionState>
   </system.web>
 
   <system.webServer>
