--- a/code/JIF.CMS/JIF.CMS.Management/Views/web.config
+++ b/code/JIF.CMS/JIF.CMS.Management/Views/web.config
@@ -19,6 +19,8 @@
         <add namespace="System.Web.Routing" />
         <add namespace="System.Web.WebPages" />
         <add namespace="System.Web.Optimization" />
+        <add namespace="JIF.CMS.Core" />
+        <add namespace="JIF.CMS.Services"/>
         <add namespace="JIF.CMS.Management" />
       </namespaces>
     </pages>
