--- a/code/JIF.CMS/JIF.CMS.Management.API/JIF.CMS.Management.API.csproj
+++ b/code/JIF.CMS/JIF.CMS.Management.API/JIF.CMS.Management.API.csproj
@@ -119,6 +119,7 @@
     <Compile Include="Controllers\ArticleController.cs" />
     <Compile Include="Controllers\BaseController.cs" />
     <Compile Include="Controllers\WelcomeController.cs" />
+    <Compile Include="Filters\AdminAuthenticationAttribute.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
@@ -138,7 +139,6 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
-    <Folder Include="Filters\" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\JIF.CMS.Core\JIF.CMS.Core.csproj">
