--- a/code/JIF.CMS/JIF.CMS.Management.API/JIF.CMS.Management.API.csproj
+++ b/code/JIF.CMS/JIF.CMS.Management.API/JIF.CMS.Management.API.csproj
@@ -116,6 +116,7 @@
   <ItemGroup>
     <Compile Include="App_Start\WebApiConfig.cs" />
     <Compile Include="Controllers\ArticleController.cs" />
+    <Compile Include="Controllers\DashboardController.cs" />
     <Compile Include="Controllers\WelcomeController.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
