--- a/code/JIF.CMS/JIF.CMS.WebApi.Framework/JIF.CMS.WebApi.Framework.csproj
+++ b/code/JIF.CMS/JIF.CMS.WebApi.Framework/JIF.CMS.WebApi.Framework.csproj
@@ -71,8 +71,8 @@
     <Compile Include="Controllers\AdminBaseController.cs" />
     <Compile Include="Controllers\BaseController.cs" />
     <Compile Include="DependencyRegistrar.cs" />
-    <Compile Include="Filters\AdminAuthenticationAttribute.cs" />
     <Compile Include="Filters\AdminAuthorizeAttribute.cs" />
+    <Compile Include="Filters\ValidateModelAttribute.cs" />
     <Compile Include="Filters\WebApiAppExceptionAttribute.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="WebWorkContext.cs" />
