update web upload foo

--- a/code/JIF.CMS/JIF.CMS.Test.Core/JIF.CMS.Test.Core.csproj
+++ b/code/JIF.CMS/JIF.CMS.Test.Core/JIF.CMS.Test.Core.csproj
@@ -55,6 +55,7 @@
   <ItemGroup>
     <Compile Include="EncyptHelperTest.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="UnitTest1.cs" />
     <Compile Include="URLEncodeTest.cs" />
   </ItemGroup>
   <ItemGroup>
