--- a/code/JIF.CMS/JIF.CMS.Management/Web.config
+++ b/code/JIF.CMS/JIF.CMS.Management/Web.config
@@ -27,7 +27,10 @@
 
   <system.web>
     <compilation debug="true" targetFramework="4.5" />
-    <httpRuntime targetFramework="4.5" />
+
+    <!--最大请求长度,单位为kb-->
+    <httpRuntime targetFramework="4.5" maxRequestLength="20480" />
+
     <pages>
       <namespaces>
         <add namespace="System.Web.Helpers" />
@@ -46,7 +49,7 @@
     <authentication mode="Forms">
       <forms cookieless="UseCookies" name="ju" defaultUrl="/home" loginUrl="/welcome"></forms>
     </authentication>
-  
+
   </system.web>
 
   <system.webServer>
