--- a/code/JIF.CMS/JIF.CMS.Test.Core/JIF.CMS.Test.Core.csproj
+++ b/code/JIF.CMS/JIF.CMS.Test.Core/JIF.CMS.Test.Core.csproj
@@ -35,6 +35,10 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="Newtonsoft.Json, Version=10.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
+      <HintPath>..\packages\Newtonsoft.Json.10.0.2\lib\net45\Newtonsoft.Json.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Web" />
   </ItemGroup>
@@ -55,7 +59,8 @@
   <ItemGroup>
     <Compile Include="EncyptHelperTest.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="UnitTest1.cs" />
+    <Compile Include="FileOperateTest.cs" />
+    <Compile Include="LinqTest.cs" />
     <Compile Include="URLEncodeTest.cs" />
   </ItemGroup>
   <ItemGroup>
@@ -66,6 +71,7 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="app.config" />
+    <None Include="packages.config" />
   </ItemGroup>
   <Choose>
     <When Condition="'$(VisualStudioVersion)' == '10.0' And '$(IsCodedUITest)' == 'True'">
