--- a/code/JIF.CMS/JIF.CMS.Web.Framework/JIF.CMS.Web.Framework.csproj
+++ b/code/JIF.CMS/JIF.CMS.Web.Framework/JIF.CMS.Web.Framework.csproj
@@ -86,6 +86,7 @@
     <Compile Include="Controllers\BaseController.cs" />
     <Compile Include="DependencyRegistrar.cs" />
     <Compile Include="Filters\AdminAuthorizeAttribute.cs" />
+    <Compile Include="Models\AttachmentViewModel.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="WebWorkContext.cs" />
   </ItemGroup>
