update web-uploader.js over pause upload

--- a/code/JIF.CMS/JIF.CMS.Management/JIF.CMS.Management.csproj
+++ b/code/JIF.CMS/JIF.CMS.Management/JIF.CMS.Management.csproj
@@ -386,23 +386,25 @@
     <Content Include="Content\simditor\scripts\uploader.js" />
     <Content Include="Content\simditor\scripts\uploader.min.js" />
     <Content Include="Content\simditor\styles\simditor.css" />
-    <Content Include="Content\webuploader-0.1.5\Uploader.swf" />
-    <Content Include="Content\webuploader-0.1.5\webuploader.css" />
-    <Content Include="Content\webuploader-0.1.5\webuploader.custom.js" />
-    <Content Include="Content\webuploader-0.1.5\webuploader.custom.min.js" />
-    <Content Include="Content\webuploader-0.1.5\webuploader.fis.js" />
-    <Content Include="Content\webuploader-0.1.5\webuploader.flashonly.js" />
-    <Content Include="Content\webuploader-0.1.5\webuploader.flashonly.min.js" />
-    <Content Include="Content\webuploader-0.1.5\webuploader.html5only.js" />
-    <Content Include="Content\webuploader-0.1.5\webuploader.html5only.min.js" />
-    <Content Include="Content\webuploader-0.1.5\webuploader.js" />
-    <Content Include="Content\webuploader-0.1.5\webuploader.min.js" />
-    <Content Include="Content\webuploader-0.1.5\webuploader.noimage.js" />
-    <Content Include="Content\webuploader-0.1.5\webuploader.noimage.min.js" />
-    <Content Include="Content\webuploader-0.1.5\webuploader.nolog.js" />
-    <Content Include="Content\webuploader-0.1.5\webuploader.nolog.min.js" />
-    <Content Include="Content\webuploader-0.1.5\webuploader.withoutimage.js" />
-    <Content Include="Content\webuploader-0.1.5\webuploader.withoutimage.min.js" />
+    <Content Include="Content\webuploader\Uploader.swf" />
+    <Content Include="Content\webuploader\webuploader.css" />
+    <Content Include="Content\webuploader\webuploader.custom.js" />
+    <Content Include="Content\webuploader\webuploader.custom.min.js" />
+    <Content Include="Content\webuploader\webuploader.fis.js" />
+    <Content Include="Content\webuploader\webuploader.flashonly.js" />
+    <Content Include="Content\webuploader\webuploader.flashonly.min.js" />
+    <Content Include="Content\webuploader\webuploader.html5nodepend.js" />
+    <Content Include="Content\webuploader\webuploader.html5nodepend.min.js" />
+    <Content Include="Content\webuploader\webuploader.html5only.js" />
+    <Content Include="Content\webuploader\webuploader.html5only.min.js" />
+    <Content Include="Content\webuploader\webuploader.js" />
+    <Content Include="Content\webuploader\webuploader.min.js" />
+    <Content Include="Content\webuploader\webuploader.noimage.js" />
+    <Content Include="Content\webuploader\webuploader.noimage.min.js" />
+    <Content Include="Content\webuploader\webuploader.nolog.js" />
+    <Content Include="Content\webuploader\webuploader.nolog.min.js" />
+    <Content Include="Content\webuploader\webuploader.withoutimage.js" />
+    <Content Include="Content\webuploader\webuploader.withoutimage.min.js" />
     <Content Include="Global.asax" />
     <Content Include="Content\fonts\fontawesome-webfont.eot" />
     <Content Include="Content\fonts\fontawesome-webfont.ttf" />
@@ -445,7 +447,7 @@
     <Content Include="Views\Home\Index.cshtml" />
     <Content Include="Views\SysManager\Index.cshtml" />
     <Content Include="Views\Shared\_Pager.cshtml" />
-    <Content Include="Content\webuploader-0.1.5\README.md" />
+    <Content Include="Content\webuploader\README.md" />
     <None Include="Properties\PublishProfiles\cn-pc.pubxml" />
     <Content Include="Views\SysManager\Add.cshtml" />
     <Content Include="Views\SysManager\Detail.cshtml" />
