dev article page

--- a/code/JIF.CMS/JIF.CMS.Core/JIF.CMS.Core.csproj
+++ b/code/JIF.CMS/JIF.CMS.Core/JIF.CMS.Core.csproj
@@ -107,6 +107,7 @@
     <Compile Include="Domain\Articles\ArticleCategory.cs" />
     <Compile Include="Domain\Attachment.cs" />
     <Compile Include="Domain\BaseEntity.cs" />
+    <Compile Include="Domain\DomainEnums.cs" />
     <Compile Include="Domain\SysAdmin.cs" />
     <Compile Include="Domain\SysLog.cs" />
     <Compile Include="Domain\IUser.cs" />
