holy categories tree bugs.

--- a/code/JIF.CMS/JIF.CMS.Test.Core/JIF.CMS.Test.Core.csproj
+++ b/code/JIF.CMS/JIF.CMS.Test.Core/JIF.CMS.Test.Core.csproj
@@ -66,6 +66,7 @@
     <Compile Include="Tests\RandomHelperTest.cs" />
     <Compile Include="Tests\NpoiExcelHelperTest.cs" />
     <Compile Include="Tests\ImageHelperTest.cs" />
+    <Compile Include="Tests\GenericStudyTest.cs" />
     <Compile Include="Tests\URLEncodeTest.cs" />
   </ItemGroup>
   <ItemGroup>
