--- a/code/JIF.CMS/JIF.CMS.Management/Web.config
+++ b/code/JIF.CMS/JIF.CMS.Management/Web.config
@@ -17,13 +17,16 @@
   </appSettings>
 
 
-  <!--暂时没有用到 JIF.CMS.Core.Configuration.JIFConfig-->
-  <JIFConfig></JIFConfig>
+  <JIFConfig type="JIF.CMS.Core.Configuration.JIFConfig">
+    <AttachmentUploadFTPAddress>192.168.0.120</AttachmentUploadFTPAddress>
+    <AttachmentUploadFTPAccount>chenning</AttachmentUploadFTPAccount>
+    <AttachmentUploadFTPPwd>2456</AttachmentUploadFTPPwd>
+  </JIFConfig>
 
 
   <connectionStrings>
-    <add name="JIF.CMS.DB" providerName="MySql.Data.MySqlClient" connectionString="Data Source=localhost;port=9527;Initial Catalog=jif.cms;uid=root;pwd=root" />
-    <!--<add name="JIF.CMS.DB" providerName="MySql.Data.MySqlClient" connectionString="Data Source=192.168.0.120;port=3306;Initial Catalog=jif.cms;uid=root;pwd=123456" />-->    
+    <!--<add name="JIF.CMS.DB" providerName="MySql.Data.MySqlClient" connectionString="Data Source=localhost;port=9527;Initial Catalog=jif.cms;uid=root;pwd=root" />-->
+    <add name="JIF.CMS.DB" providerName="MySql.Data.MySqlClient" connectionString="Data Source=192.168.0.120;port=3306;Initial Catalog=jif.cms;uid=root;pwd=123456" />
   </connectionStrings>
 
   <system.web>
