--- a/code/JIF.CMS/JIF.CMS.Management/Views/web.config
+++ b/code/JIF.CMS/JIF.CMS.Management/Views/web.config
@@ -20,6 +20,7 @@
         <add namespace="System.Web.WebPages" />
         <add namespace="System.Web.Optimization" />
         <add namespace="JIF.CMS.Core" />
+        <add namespace="JIF.CMS.Core.Extensions"/>
         <add namespace="JIF.CMS.Services"/>
         <add namespace="JIF.CMS.Management" />
         <add namespace="JIF.CMS.Management.Models" />
