--- a/code/JIF.CMS/JIF.CMS.Services/JIF.CMS.Services.csproj
+++ b/code/JIF.CMS/JIF.CMS.Services/JIF.CMS.Services.csproj
@@ -42,6 +42,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Articles\ArticleService.cs" />
+    <Compile Include="Articles\Dtos\InsertArticleCategoryInput.cs" />
     <Compile Include="Articles\Dtos\SearchArticleListOutput.cs" />
     <Compile Include="Articles\Dtos\InsertArticleInput.cs" />
     <Compile Include="Articles\Dtos\DeleteArticleCategoryInput.cs" />
