--- a/code/JIF.CMS/JIF.CMS.Management/Web.config
+++ b/code/JIF.CMS/JIF.CMS.Management/Web.config
@@ -25,12 +25,12 @@
 
 
   <connectionStrings>
-    <!--<add name="JIF.CMS.DB" providerName="MySql.Data.MySqlClient" connectionString="Data Source=localhost;port=9527;Initial Catalog=jif.cms;uid=root;pwd=root" />-->
-    <add name="JIF.CMS.DB" providerName="MySql.Data.MySqlClient" connectionString="Data Source=192.168.0.120;port=3306;Initial Catalog=jif.cms;uid=root;pwd=123456" />
+    <add name="JIF.CMS.DB" providerName="MySql.Data.MySqlClient" connectionString="Data Source=localhost;port=9527;Initial Catalog=jif.cms;uid=root;pwd=root" />
+    <!--<add name="JIF.CMS.DB" providerName="MySql.Data.MySqlClient" connectionString="Data Source=192.168.0.120;port=3306;Initial Catalog=jif.cms;uid=root;pwd=123456" />-->
   </connectionStrings>
 
   <system.web>
-    <compilation debug="true" targetFramework="4.5" />
+    <compilation debug="false" targetFramework="4.5" />
 
     <!--最大请求长度,单位为kb-->
     <httpRuntime targetFramework="4.5" maxRequestLength="20480" />
